[package]
name = "ru-berry"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
rusqlite = { version = "0.32.1", features = ["bundled"] }
warp = "0.3.7"
r2d2 = "0.8"
r2d2_sqlite = "0.25.0"
tokio = {  version = "1.42.0", features = ["full", "rt-multi-thread"] }
chrono = "0.4.39"
